# noteworthy

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  README.md  obsidian_implementation_plan.md  obsidian_requirements.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: tests.yml
scripts/: noteworthy  setup.sh
src/noteworthy/: __init__.py  database.py  extract_notes_db.py  markdown_renderer.py  note_content.py  note_copy.py  notes_datatypes.py  notestore_pb2.py  noteworthy.py
src/noteworthy/obsidian/: dialect.py  filename.py  frontmatter.py  sync.py  (+2 more)
tests/: README.md  conftest.py  helpers.py  notestore_factory.py  sync_test_base.py  test_data_loaders_db.py  test_export.py  test_extract_notes_db.py  test_metadata.py  test_note_copy_db.py  test_smart_folders.py  test_sync.py
tests/test_data/: AI_FEST.apple_generated.md  AI_FEST.raw_data.json  Another test note Jan 24, 2026.apple_generated.md  DAY_PLANNER.apple_generated.md  DAY_PLANNER.raw_data.json  FORMATTING_BOUNDARY.apple_generated.md  FORMATTING_BOUNDARY.raw_data.json  RASPBERRY_PI_ODDJOB.apple_generated.md  RASPBERRY_PI_ODDJOB.raw_data.json  TEST_NOTE.apple_generated.md  TEST_NOTE.raw_data.json
tests/test_obsidian/: test_cli_dispatch.py  test_dialect.py  test_filename.py  test_frontmatter.py  test_reexport.py  test_renderer_integration.py  test_sync.py  test_sync_edges.py  test_target_state.py  test_vault_config.py
tests/test_viewer/: test_backup_reader.py  test_install.py  test_markdown_to_html.py  test_search.py  test_server.py
(+8 files in other folders)
