[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "noteworthy"
version = "0.1.0"
description = "Export Apple Notes to Markdown with full formatting preservation"
readme = "README.md"
requires-python = ">=3.12"
license = {file = "LICENSE"}
authors = [
    {name = "Brian", email = "brian.chess@gmail.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Operating System :: MacOS",
]

dependencies = [
    "protobuf>=4.0",
]

[project.urls]
Homepage = "https://github.com/bvchess/noteworthy"
Repository = "https://github.com/bvchess/noteworthy"
Issues = "https://github.com/bvchess/noteworthy/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.scripts]
noteworthy = "noteworthy.noteworthy:main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.package-data]
"noteworthy" = ["notestore.proto"]
"noteworthy.viewer" = ["static/*"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["noteworthy*"]
